[project]
name = "datavalue_theme_free"
authors = [
    { name = "Abdo Hamoud", email = "abdo.host@gmail.com"}
]
description = "DataValue Theme is a modern and customizable UI theme for Frappe and ERPNext. It improves the overall user experience and workflow efficiency while keeping the core framework intact and fully upgrade-safe."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

indent-style = "tab"
docstring-code-format = true
